--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "jbmchd/jb-laravel-auth-sanctum": "dev-main",
-        "jbmchd/jb-laravel-global": "^2.0",
+        "jbmchd/jb-laravel-auth-sanctum": "2.0",
+        "jbmchd/jb-laravel-global": "^2.1",
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.6",
         "laravel/telescope": "^4.1",
