--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=
+SANCTUM_STATEFUL_DOMAINS=
+CORS_ALLOWED_ORIGINS=https://
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
